# web-detector

./: .dockerignore  Dockerfile  package-lock.json  package.json  pyproject.toml
shoes_detector/: app.py
shoes_detector/static/: index.html  main.js  worker.js
shoes_detector/static/ort/: worker.js
